--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 }
 
 .content-wrapper {
-    width: 90%;
+    width: 60%;
     margin: auto;
 }
 
@@ -16,6 +16,23 @@ body {
     margin: 0;
     padding: 0;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.divider {
+    height: 4px;
+    width: 50px;
+}
+
+.divider.brown {
+    background: rgb(66, 44, 32);
+}
+
+.divider.white {
+    background: #fff;
+}
+
+h1, h2, p, .divider {
+    margin: 0;
 }
 
 /*********** 
@@ -30,8 +47,9 @@ body {
 }
 
 .hero .navigation {
+    position: fixed;
     width: 100%;
-    height: 100px;
+    height: 80px;
     background: rgba(0,0,0,.8);
 }
 
@@ -45,18 +63,18 @@ body {
 
 /* LOGO */
 
-.hero .navigation #logo {
-    color: #fff;
-    font-size: 40px;
+.hero .navigation #logo img {
+    width: 60px;
+    height: auto;
 }
 
-.hero .navigation #logo:hover p{
-    transform: rotate(360deg) scale(.6);
+.hero .navigation #logo:hover img {
+    transform: rotate(360deg) scale(.8);
     color: bisque;
     transition: 1s;
 }
 
-.hero .navigation #logo p {
+.hero .navigation #logo img {
     margin: 0;
     padding: 0;
     transition: 1s;
@@ -88,28 +106,21 @@ body {
 }
 
 /* CONTENT */
-.hero .hero-content {
-    height: 100vh;
-}
 
 .hero .hero-content {
-    height: 100vh;
+    height: 100%;
+    text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: -100px;
 }
 
 .hero .hero-content h1 {
     padding: 2rem 0 2rem 0;
     color: rgb(50, 41, 36);
-}
-
-.hero .hero-content .divider {
-    height: 5px;
-    width: 50px;
-    background: rgb(50, 41, 36);
+    font-size: 48px;
+    margin: 0;
 }
 
 .hero .hero-content p {
@@ -152,6 +163,7 @@ body {
     background: rgb(177, 85, 9);
     padding: 0;
     margin: 0;
+    text-align: center;
 }
 
 .starter .starter-content {
@@ -165,12 +177,6 @@ body {
 .starter .starter-content h2 {
     padding: 2rem 0 2rem 0;
     color: #fff;
-}
-
-.starter .starter-content .divider-white {
-    height: 5px;
-    width: 50px;
-    background: #fff;
 }
 
 .starter .starter-content p {
